Add coding and scripts for color changing text based on OK/Cancel selection.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <title>Amusement Park Rides!</title>
   </head>
   <body>
-    <div id="roller">
-      <p>Our roller coaster is super cool!</p>
-    </div>
-    <div id="swing">
-      <p>The swings are okay.</p>
-    </div>
-    <div id="wheel">
-      <p>The ferris wheel is not recommended for people who are afraid of heights.</p>
-    </div>
-    <div id="bumper">
-      <p>Bumper cars are perfect for annoying your friends!</p>
+    <div id="rides">
+      <ul>
+        <li>Our <span class="under4">roller coaster</span><span class="over4">roller coaster</span> is super cool!</li>
+        <li>The <span class="under4">swings</span><span class="over4">swings</span> are okay.</li>
+        <li>The <span class="under4">ferris wheel</span><span class="over4">ferris wheel</span> is not recommended for people who are afraid of heights.</li>
+        <li><span class="under4">Bumper cars</span><span class="over4">Bumper cars</span> are perfect for annoying your friends!</li>
+      </ul>
     </div>
   </body>
   </html>
