fix issues in amusement park site

--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <title>Amusement Park Rides!</title>
   </head>
   <body>
-    <div id="rides">
+    <h1> Here is a list of our rides </h1>
+    <div id="under4">
       <ul>
-        <li>Our <span class="under4">roller coaster</span><span class="over4">roller coaster</span> is super cool!</li>
-        <li>The <span class="under4">swings</span><span class="over4">swings</span> are okay.</li>
-        <li>The <span class="under4">ferris wheel</span><span class="over4">ferris wheel</span> is not recommended for people who are afraid of heights.</li>
-        <li><span class="under4">Bumper cars</span><span class="over4">Bumper cars</span> are perfect for annoying your friends!</li>
+        <li>Roller Coaster</li>
+        <li>Pirate Ride</li>
+        <li>Bumper Cars</li>
+      </ul>
+    </div>
+    <div id="over4">
+      <ul>
+        <li class="bold">Roller Coaster</li>
+        <li class="bold">Pirate Ride</li>
+        <li class="bold">Bumper Cars</li>
+      </ul>
+    </div>
+    <div id="exactly4">
+      <ul>
+        <li>Roller Coaster</li>
+        <li class="bold">Pirate Ride</li>
+        <li>Bumper Cars</li>
       </ul>
     </div>
   </body>
